[package]
name = "meblog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
